# p2pProject

./: README  README.md
client/: Makefile
client/src/: Clients.java  Peer.java  Piece.java  Tracker_File.java  main.java  main2.java
client/tests/: P2PTests2.java  P2PTests3.java  P2TTestst1.java  PearToPearTests.java
client/tests/faussaires/: FauxTracker.java
client/tests/files/: Shrek2.txt
client/tests/files2/: Arlos.txt
client/tests/files3/: Camus.txt
client/tests/files4/: Testfilefortest3.txt
server/: CMakeLists.txt
server/src/: cmd.c  cmd.h  processing.c  processing.h  queue.c  queue.h  request_functions.c  request_functions.h  tracker.c  utils.c  utils.h
server/tst/: test_queue.c  test_request_functions.c  test_utils.c
